refactored code to make more readable, added home button, fixed border issues on landing page

--- a/MaizePlay/style.css
+++ b/MaizePlay/style.css
@@ -21,8 +21,8 @@ h1 {
 
 .sport_button{
     background-color: transparent;
-    border:none;
-    border-color: blue;
+    border: 10px solid;
+    border-color: #FFCB05;
 }
 
 .img{
@@ -46,10 +46,22 @@ h1 {
     color: #FFCB05;
 }
 
+#Home{
+    width: 150px;
+    height: 50px;
+    font-size: 20px;
+    background-color: #00274C;
+    color: #FFCB05;
+    position: absolute;
+    top: 30px;
+    left: 30px;
+}
+
 #selected_sport{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
+    margin: 15px;
 }
 
 #selected{
